@@ -15,7 +15,7 @@
 
 void fatal(int code, const char *func, const char *fmt, ...);
 void fataly(int code, const char *func, int line, const char *fmt, ...);
-void print_inc(void);
+void print_inc(const char *file, int lin);
 void warning(Parrot_Interp interpreter, const char *func, const char *fmt, ...);
 void debug(Parrot_Interp interpreter, int level, const char *fmt, ...);
 void info(Parrot_Interp interpreter, int level, const char *fmt, ...);
